tests/baselines/reference/noErrorUsingImportExportModuleAugmentationInDeclarationFile3.errors.txt
1.ts(1,1): error TS1148: Cannot use imports, exports, or module augmentations when '--module' is 'none'.


==== 0.d.ts (0 errors) ====
    export = a;
    declare var a: number;
    
==== 1.ts (1 errors) ====
    export var j = "hello";  // error
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot use imports, exports, or module augmentations when '--module' is 'none'.
    